--- a/AnIRC/AnIRC.csproj
+++ b/AnIRC/AnIRC.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -57,6 +57,7 @@
     <Compile Include="IrcUser.cs" />
     <Compile Include="IrcUserCollection.cs" />
     <Compile Include="ModeCollection.cs" />
+    <Compile Include="MonitorList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replies.cs" />
     <Compile Include="WhoisResponse.cs" />
