--- a/AnIRC/AnIRC.csproj
+++ b/AnIRC/AnIRC.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replies.cs" />
     <Compile Include="WhoisResponse.cs" />
+    <Compile Include="WhoxField.cs" />
+    <Compile Include="WhoxRequestType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
