--- a/AnIRC/AnIRC.csproj
+++ b/AnIRC/AnIRC.csproj
@@ -1,67 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0F38DD6F-9BC0-480B-8695-6F50ACB8A8C7}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnIRC</RootNamespace>
-    <AssemblyName>AnIRC</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AsyncRequest.cs" />
-    <Compile Include="ChannelModes.cs" />
-    <Compile Include="ChannelStatus.cs" />
-    <Compile Include="Colours.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="EventArgs.cs" />
-    <Compile Include="Handlers.cs" />
-    <Compile Include="Hostmask.cs" />
-    <Compile Include="IrcCapability.cs" />
-    <Compile Include="IrcChannel.cs" />
-    <Compile Include="IrcChannelCollection.cs" />
-    <Compile Include="IrcChannelUser.cs" />
-    <Compile Include="IrcChannelUserCollection.cs" />
-    <Compile Include="IrcClient.cs" />
-    <Compile Include="IrcExtensions.cs" />
-    <Compile Include="IrcLine.cs" />
-    <Compile Include="IrcMessageTarget.cs" />
-    <Compile Include="IrcStringComparer.cs" />
-    <Compile Include="IrcUser.cs" />
-    <Compile Include="IrcUserCollection.cs" />
-    <Compile Include="ModeCollection.cs" />
-    <Compile Include="MonitorList.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Replies.cs" />
-    <Compile Include="WhoisResponse.cs" />
-    <Compile Include="WhoxField.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
